# pyCANstreamViewer

./: CLAUDE.md  pycanstreamviewer.spec  pyproject.toml
config/: preset_views.yaml
dbc/: gmlan_v1.6.dbc  pyrofuse-bit-prototype.dbc
src/pycanstreamviewer/: __init__.py  __main__.py  can_manager.py  constants.py  custom_viewbox.py  debug_replay.py  decode.py  device_scanner.py  distribution.py  figure_block.py  live_data_store.py  logging_config.py  main.py  main_window.py  signal_selector.py  utils.py
